--- a/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
@@ -1,53 +1,106 @@
-﻿@model WebApplication1.Models.account
-
-@{
-    Layout = null;
-}
+﻿@using WebApplication1.Models
+@model WebApplication1.Models.account
 
 <!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Profile</title>
 </head>
 <body>
-    <div>
-        <h2>My Profile</h2>
-        <hr />
-        <div class="container">
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <center>
-                                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRbezqZpEuwGSvitKy3wrwnth5kysKdRqBW54cAszm_wiutku3R" name="aboutme" width="140" height="140" border="0" class="img-circle">
-                                <h3 class="media-heading">@Html.DisplayFor(model => model.username)</h3>
-                                <p class="text-left">
-                                    <strong>Description: </strong><br>
-                                    I'm a porn director
-                                </p>
-                                <div class="btn-group" data-toggle="buttons">
-                                    <label class="btn btn-primary active">
-                                        <input type="button" class="btn btn-primary" value="Past Events" autocomplete="off">
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="button" class="btn btn-primary" value="Future Events" autocomplete="off">
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="button" class="btn btn-primary" value="Host Events" autocomplete="off">
-                                    </label>
-                                </div>
-                                <br>
-                            </center>
-                        </div>
-                    </div>
+    <div class="container-fluid" id="mySettings" style="margin-top:100px">
+        <div id="Collapsable-links">
+            <ul class="nav nav-tabs">
+                <li><a href="#" data-toggle="collapse" data-target="#settings" data-parent="#mySettings">Settings</a></li>
+                <li><a href="#" data-toggle="collapse" data-target="#EventsMade" data-parent="#mySettings">Events Made</a></li>
+                <li><a href="#" data-toggle="collapse" data-target="#EventsChecks" data-parent="#mySettings">Events Checked In</a></li>
+            </ul>
+        </div>
+
+        <div class="Collapsable-Info">
+            <div id="settings" class="collapse in">
+                <dl class="dl-horizontal">
+                    <dt>Firstname:</dt>
+                    <dd>@Model.firstname</dd>
+                    <dt>Lastname:</dt>
+                    <dd>@Model.lastname</dd>
+                    <dt>Email:</dt>
+                    <dd>@Model.Email</dd>
+                    <dt>Brithday:</dt>
+                    <dd>@Model.birthday</dd>
+                    <dt>Description:</dt>
+                    <dd>@Model.description</dd>
+                </dl>
+            </div>
+            <div id="EventsMade" class="collapse">
+                <div class="container-fluid">
+                    <h2>Log Book - Events Made:</h2>
+                    <p>You find here underneath all your history of Events organised by you. Click on the Event name to display the event page.</p>
+                    @if (ViewBag.EventsMade == null)
+                    {
+                        <p> No events history to display. Sorry you have no life.</p>
+                    }
+                    else
+                    {
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Eventname</th>
+                                    <th>Date</th>
+                                    <th>Participants</th>
+                                    <th>Location</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (Event e in ViewBag.EventsMade)
+                                {
+                                    <tr class="warning">
+                                        <td>@Html.ActionLink(e.EventName, "Register", "Account") </td>
+                                        <td>@e.EventEndDate </td>
+                                        <td>@e.EventParticipants </td>
+                                        <td>@e.EventLocation</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>}
+                </div>
+            </div>
+            <div id="EventsChecks" class="collapse">
+                <div class="container-fluid">
+                    <h2>Log Book - Your Check Ins:</h2>
+                    <p>You find here underneath all your history of Events you participated to. Click on the Event name to display the event page.</p>
+                    @if (ViewBag.EventsParticipated == null)
+            {
+                        <p> No events history to display. Sorry you have no life.</p>
+                    }
+                    else
+                    {
+
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Eventname</th>
+                                    <th>Date</th>
+                                    <th>Participants</th>
+                                    <th>Location</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (Event e in ViewBag.EventsParticipated)
+                                {
+                                    <tr class="warning">
+                                        <td>@Html.ActionLink(e.EventName, "Register", "Account") </td>
+                                        <td>@e.EventEndDate </td>
+                                        <td>@e.EventParticipants </td>
+                                        <td>@e.EventLocation</td>
+                                    </tr>}
+                            </tbody>
+                        </table>}
                 </div>
             </div>
         </div>
-    <p>
+    </div>
 
-    </p>
 </body>
 </html>
