--- a/WebApplication1/WebApplication1/Views/Event/EditEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/EditEvent.cshtml
@@ -8,7 +8,7 @@
 {
     @Html.AntiForgeryToken()
     <hr />
-    <h4 style="margin-top:50px; margin-left:10px">Edit Event</h4>
+    <h2 style="margin-top:50px; margin-left:10px">Edit Event</h2>
 
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div>
-            @Html.ActionLink("Back to Homepage", "Index")
+            @Html.ActionLink("Back to Homepage", "../")
         </div>
 }
 @section Scripts {
