--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -3,6 +3,8 @@
 @using CloudinaryDotNet.Actions
 @model WebApplication1.Models.EventViewModel
 
+ <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+
 @{
 }
 <!DOCTYPE html>
@@ -11,6 +13,8 @@
 <head>
     <meta name="viewport" content="width=device-width" HtmlEncode="false" />
     <title>ViewEvent</title>
+   
+    
 </head>
 
 <body>
@@ -90,8 +94,8 @@
                             </div>
                         </div>
                     </div>
-                    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-                    <script>
+                    
+                    <script type="text/javascript">
                         $(document).after(function () {
                             $('#participants').click(function () {
                                 if ($('button span').hasClass('glyphicon-plus')) {
