--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -2,18 +2,27 @@
 @using Microsoft.AspNet.Identity
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>ZoMoMo - Home </title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <!-- Include Required Prerequisites -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
+
+    <!-- Include Date Range Picker -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/modernizr")
 
 
 </head>
 <body>
-    <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar primary-color">
+    <nav class="navbar navbar-fixed-top scrolling-navbar">
         <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -26,84 +35,44 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     @Html.Partial("_LoginPartial")
-                    @*
-                        @if (Request.IsAuthenticated)
-
-                        {
-                            using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-                            {
-                                @Html.AntiForgeryToken()
-
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li class="dropdown">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">@Html.Raw("Hello " + User.Identity.GetUserName())  <span class="caret"></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li>@Html.ActionLink("My profile", "Profile")</li>
-                                            <li>@Html.ActionLink("My checkins", "#")</li>
-                                            <li>@Html.ActionLink("My Events", "#")</li>
-                                            <li>@Html.ActionLink("Settings", "#")</li>
-                                        </ul>
-                                        </li>
-                                    </ul>
-
-                                        }
-                                        }
-                                        else
-                                        {
-                                        <ul class="nav navbar-nav navbar-right">
-                                            <li class="dropdown">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-                                                <ul id="login-dp" class="dropdown-menu">
-                                                    <li>
-                                                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                                        {
-                                                            <div class="row">
-                                                                <div class="col-md-12">
-                                                                    <section id="loginForm">
-
-                                                                        @Html.AntiForgeryToken()
-                                                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                                                        <div class="social-buttons">
-                                                                            <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-                                                                            <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-                                                                        </div>
-                                                                        <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                                                                            <div class="form-group">
-                                                                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                                                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                                                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                                                                            </div>
-                                                                            <div class="form-group">
-                                                                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                                                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                                                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                                                                <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-                                                                            </div>
-                                                                            <div class="form-group">
-                                                                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                                                                            </div>
-                                                                            @Html.CheckBoxFor(m => m.RememberMe)
-                                                                            @Html.LabelFor(m => m.RememberMe)
-                                                                        </form>
-                                                                    </section>
-                                                                </div>
-                                                                <div class="bottom text-center">
-                                                                    New here ? @Html.ActionLink("Register as a new user", "Register")
-                                                                </div>
-
-                                                            </div>
-                                                        }
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                        }*@
                     <ul class="nav navbar-nav"></ul>
                     <form class="nav navbar-form navbar-nav navbar-right">
                         <div class="input-group">
 
                             <span><input type="text" id="name" class="form-control navbar-nav" placeholder="Search events or tags" style="width:400px;"></span>
                             <span><input type="text" class="form-control navbar-nav city" placeholder="Enter a city" id="City" /></span>
+                            <div id="reportrange" class="form-control navbar-nav" style="background: #fff; cursor: pointer; border: 1px solid #ccc; width: 40px">
+                                <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                            </div>
+
+                            <script type="text/javascript">
+                                jQuery(document).ready(function ($) {
+
+                                    var start = moment().subtract(29, 'days');
+                                    var end = moment();
+
+                                    function cb(start, end) {
+                                        $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                                    }
+
+                                    $('#reportrange').daterangepicker({
+                                        startDate: start,
+                                        endDate: end,
+                                        "opens" : "left",
+                                        ranges: {
+                                            'Today': [moment(), moment()],
+                                            'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                                            'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                                            'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                                            'This Month': [moment().startOf('month'), moment().endOf('month')],
+                                            'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                                        }
+                                    }, cb);
+
+                                    cb(start, end);
+
+                                })
+                            </script>
                             <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk&libraries=places"></script>
                             <script type="text/javascript">
                                 var input = document.getElementById('City');
@@ -113,7 +82,7 @@
                                         e.preventDefault();
                                     }
                                 });
-                             
+
                                 google.maps.event.addDomListener(window, 'load', function () {
                                     var options = {
                                         types: ['(cities)']
@@ -121,20 +90,6 @@
                                     var places = new google.maps.places.Autocomplete(input, options);
                                 });
                             </script>
-                            <select id="date" data-xd-wired="select-box" style="height:34px" class="date">
-                                <option disabled selected>Enter date</option>
-                                <option value="today">Today</option>
-                                <option value="tomorrow">Tomorrow</option>
-                                <option value="this_week">This Week</option>
-                                <option value="this_weekend">This Weekend</option>
-                                <option value="next_week">Next Week</option>
-                                <option value="next_month">Next Month</option>
-                            </select>
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
                         </div>
                     </form>
                 </div>
@@ -142,11 +97,8 @@
         </div>
     </nav>
 
-
-   
-
     <div class="container body-content" style="background-color:#e8edf3">
-        
+
         @RenderBody()
         @RenderSection("SPAViews", required: false)
         <hr />
@@ -154,6 +106,8 @@
             <p>&copy; @DateTime.Now.Year - ©Copyright ZoMoMo</p>
         </footer>
     </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("Scripts", required: false)
 </body>
 </html>
