--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -42,7 +42,7 @@
             @Html.TextBoxFor(m => m.lastname, new { @class = "form-control" })
         </div>
     </div>
-    
+
     <div class="form-group">
         @Html.LabelFor(m => m.Hometown, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -54,34 +54,39 @@
     <div class="form-group">
         @Html.LabelFor(m => m.birthday, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.birthday, new { @class = "form-control" })
+            @Html.EditorFor(m => m.birthday, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.description, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.description, new { @class = "form-control" })
+            @Html.TextAreaFor(m => m.description, new { @class = "form-control", rows = "5" })
         </div>
     </div>
-
-    
-   
     <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Register" />
-            </div>
+        @Html.LabelFor(m => m.ImageUpload, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <span class="form-group">
+                <input type="file" accept="image/*" aria-label="photo" name="ImageUpload" id="ImageUpload" />
+            </span>
         </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Register" />
+        </div>
+    </div>
 }
 
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-            <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
-            <script type="text/javascript">
-                google.maps.event.addDomListener(window, 'load', function () {
-                    var input = document.getElementById('Hometown');
-                    var places = new google.maps.places.Autocomplete(input);
-                });
-            </script>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk"></script>
+    <script type="text/javascript">
+        google.maps.event.addDomListener(window, 'load', function () {
+            var input = document.getElementById('Hometown');
+            var places = new google.maps.places.Autocomplete(input);
+        });
+    </script>
 
-        }
+}
